java/spring-gcp/api-info-clients/k8s/api-clients-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-clients-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 8080
      targetPort: 8080
