java/spring-gcp/api-info-clients/k8s/clients-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clients-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/?(.*)
            backend:
              service:
                name: api-clients-cluster-ip-service
                port:
                  number: 8080
